[gd_scene load_steps=5 format=3 uid="uid://bc4s0praamr8t"]

[ext_resource type="Script" uid="uid://cw0i4b2p0dhfk" path="res://menu/root_menu.gd" id="1_02alu"]
[ext_resource type="PackedScene" uid="uid://1amiiq7xfogn" path="res://menu/main_menu/main_menu.tscn" id="1_8j4fq"]
[ext_resource type="PackedScene" uid="uid://c4s5y2nw0bhqv" path="res://menu/pause_menu/pause_menu.tscn" id="3_3oibf"]
[ext_resource type="PackedScene" uid="uid://nv8neqdttrjf" path="res://menu/credits_menu/credits_menu.tscn" id="4_3oibf"]

[node name="RootMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_02alu")

[node name="MainMenu" parent="." instance=ExtResource("1_8j4fq")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PauseMenu" parent="." instance=ExtResource("3_3oibf")]

[node name="CreditsMenu" parent="." instance=ExtResource("4_3oibf")]

[connection signal="credits_pressed" from="MainMenu" to="." method="_on_main_menu_credits_pressed"]
[connection signal="start_pressed" from="MainMenu" to="." method="_on_main_menu_start_pressed"]
[connection signal="main_menu_pressed" from="PauseMenu" to="." method="_on_main_menu_pressed"]
[connection signal="resume_pressed" from="PauseMenu" to="." method="_on_pause_menu_resume_pressed"]
[connection signal="main_menu_pressed" from="CreditsMenu" to="." method="_on_main_menu_pressed"]
